--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.87.6",
     "arweave": "^1.15.5",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
     "form-data": "^4.0.1",
     "sharp": "^0.33.5"
